tests/errors/assertion.ensureWithCustomMessage.art
ensure.message: "Wrong calc" -> 0 = 1 - 1
ensure.message: "Wrong calc" -> 0 = 1 + 1
